name:                cdrepo
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Matt Neary
maintainer:          neary.matt@gmail.com
build-type:          Simple
cabal-version:       >=1.10
ghc-options:         -threaded

executable cdrepo
  main-is:             cdrepo.hs
  build-depends:       base >=4.8 && <4.9,
                       process ==1.2.3.0,
                       directory ==1.2.2.0
  default-language:    Haskell2010
